# coriander-CLBlast

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: corianderclblast.cmake.in
include/: cublas_v2.h
src/: cocl_blas.cpp
test/: CMakeLists.txt
test/endtoend/: CMakeLists.txt
